hard-gists/1424374/run.log
=== Docker Run Log for 1424374 ===
Started at: Mi 29. Okt 12:13:30 CET 2025

[2025-10-29 12:13:31] START: Running container for 1424374
[2025-10-29 12:13:31] SUCCESS: Container c014419a421869f5848ab1d6a8b81f3d0d8f7b2448c2ac81de3bce0b1ed1ec11 started for 1424374
=== Container logs for 1424374 ===
  File "/snippet.py", line 38
    print e     
    ^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1424374 ===
[2025-10-29 12:13:33] INFO: Container c014419a421869f5848ab1d6a8b81f3d0d8f7b2448c2ac81de3bce0b1ed1ec11 has stopped
